# cache-manager

./: README.md  init-local-vapi.sh  init.sh  meson.build
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release.yml  template-bootstrap.yml
src/: cache.vala  cache_item.vala  meson.build
src/filesystem/: cache.vala  cache_item.vala  meson.build
src/memory/: cache.vala  cache_item.vala  meson.build
src/simple/: cache_interface.vala  meson.build
tests/: filesystem_cache_test.vala  main.vala  memory_cache_test.vala  meson.build
